--- a/rectangles-game.html
+++ b/rectangles-game.html
@@ -97,10 +97,20 @@ h1 {
   margin-right: 0.5rem;
 }
 
-#show-dims-toggle.on {
+#show-dims-toggle.on, #hide-nums-toggle.on {
   background: #ddd;
   border-color: #888;
   color: #333;
+}
+
+#hide-nums-toggle {
+  font-size: 0.85rem;
+  padding: 0.3rem 0.8rem;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  background: #f5f5f5;
+  color: #666;
+  cursor: pointer;
 }
 
 #turn-indicator {
@@ -133,6 +143,7 @@ h1 {
   background: #333;
   padding: 3px;
   border-radius: 8px;
+  direction: ltr;
 }
 
 .cell {
@@ -144,7 +155,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: clamp(0.65rem, 2.5vw, 0.85rem);
+  font-size: clamp(0.8rem, 5vw, 1.5rem);
   font-weight: bold;
   color: #555;
 }
@@ -200,6 +211,7 @@ button {
   <span id="value-row"></span>
   <button id="show-dims-toggle">הצג אפשרויות</button>
   <button id="know-btn">אני יודע את הצורה!</button>
+  <button id="hide-nums-toggle">הסתר מספרים</button>
   <span class="separator">|</span>
   <label>לוח:</label>
   <button class="size-btn" data-size="5">5</button>
@@ -387,12 +399,14 @@ let currentMode = 'area';
 let currentValue = 8;
 let currentDims = [];
 let showDims = false;
+let hideNums = false;
 
 const gridEl = document.getElementById('grid');
 const turnEl = document.getElementById('turn-indicator');
 const modeDisplayEl = document.getElementById('mode-display');
 const valueRowEl = document.getElementById('value-row');
 const dimsToggle = document.getElementById('show-dims-toggle');
+const numsToggle = document.getElementById('hide-nums-toggle');
 const knowBtn = document.getElementById('know-btn');
 
 function randInt(max) { return Math.floor(Math.random() * max); }
@@ -527,7 +541,7 @@ function renderGrid() {
     for (let c = 0; c < GRID_SIZE; c++) {
       const cell = document.createElement('div');
       cell.className = 'cell';
-      cell.textContent = num;
+      cell.textContent = hideNums ? '' : num;
       if (revealed[r][c]) {
         cell.classList.add('revealed', board[r][c]);
         cell.textContent = '';
@@ -655,6 +669,12 @@ dimsToggle.addEventListener('click', () => {
 });
 
 knowBtn.addEventListener('click', enterGuessing);
+
+numsToggle.addEventListener('click', () => {
+  hideNums = !hideNums;
+  numsToggle.classList.toggle('on', hideNums);
+  renderGrid();
+});
 
 document.querySelectorAll('.size-btn').forEach(btn => {
   btn.addEventListener('click', () => {
