rectangles-game: update title

--- a/rectangles-game.html
+++ b/rectangles-game.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>משחק הצוללת</title>
+<title>משחק הצוללות הגיאומטריות</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -222,7 +222,7 @@ button {
 </head>
 <body>
 
-<h1>משחק הצוללת</h1>
+<h1>משחק הצוללות הגיאומטריות</h1>
 
 <div class="btn-row" id="top-row">
   <button class="mode-btn active" data-mode="area">שטח</button>
